[package]
name = "lets"
version = "0.1.0"
edition = "2021"


description = "A Rust framework for developing cryptographic communication protocols"
license = "Apache-2.0/MIT"
readme = "README.md"

[features]
default = ["std", "tangle-client"]  
std = ["spongos/std"]  
tangle-client = []
tangle-client-wasm = []
# tangle-client = ["iota-client/async", "futures", "iota-crypto/blake2b"]
# tangle-client-wasm = ["iota-client/wasm", "futures"]
utangle-client = ["bee-ternary","rayon", "iota-crypto/curl-p"]
did = ["identity_iota"]


[dependencies]
# IOTA and cryptography dependencies
identity_iota = { version = "1.4.0", features = ["memstore"], optional = true }
iota-crypto = { version = "0.9.1", default-features = false, features = ["x25519", "ed25519", "sha", "blake2b"] }
spongos = { path = "../spongos", default-features = false, features = ["osrng", "std"] }
iota-sdk = { version = "1.0.2", default-features = true, features = ["tls", "client", "stronghold", "wallet", "storage", "rocksdb"] }
# iota-client = { version = "2.0.1-rc.7", default-features = false, optional = true }



# General dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.62"
rand = "0.8.5"
bip39 = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.13"
bs58 = "0.4"
ed25519-dalek = "1.0.0-pre.3"
multibase = "0.9"
hex = "0.4"
dotenvy = "0.15"
url = "2.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"]} 
async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", features = ["serde"] }

# Optional and 3rd-party dependencies
bee-ternary = { version = "0.5.2", default-features = false, optional = true }
futures = { version = "0.3.8", default-features = false, optional = true }
parking_lot = { version = "0.11.2", default-features = false, optional = true }
rayon = { version = "1.5.3", default-features = false, optional = true }
serde-big-array = { version = "0.4", default-features = false }
spin = { version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex"], optional = true }

# Error handling
thiserror-no-std = { version = "2.0.2", default-features = false }

[dev-dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }


[[bench]]
name = "tangle_clients"
harness = false

